--- a/Domasna3/frontend/src/styles/App.css
+++ b/Domasna3/frontend/src/styles/App.css
@@ -2,6 +2,11 @@
     font-size: 1em !important;
 }
 
+body {
+    overflow: hidden;
+    height: 100vh;
+}
+
 .leaflet-container {
     width: 100%;
     height: 100vh;
@@ -70,7 +75,7 @@
 }
 
 .ui.form.login-register-form {
-    width: 30%;
+    width: 40%;
 }
 
 .ui.cards.favourites-list {
@@ -84,7 +89,7 @@
     height: 100vh;
 }
 
-body {
-    overflow: hidden;
-    height: 100vh;
+.login-register-container {
+    display: grid;
+    place-items: center;
 }
